# music_api

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
music/apis/v1/: track_router.py
music/apis/v1/schemas/: track_response.py
music/management/commands/: ingest_tracks.py
music/migrations/: 0001_initial.py
music/models/: __init__.py  track.py
music/services/: track_service.py
templates/: index.html
tests/test_service/: test_track_router.py  test_track_service.py
